--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -8,23 +8,22 @@
 }
 
 .locations {
-	display: inline;
+	display: inline-block;
 	vertical-align: middle;
-	float: left;
 	height: 100%;
 	width: 25%;
+	position: relative;
 
 	line-height: 20px;
 	border-right: 1px solid #DDDDDD;
 }
 
 .filter_amenities {
-	display: inline;
+	display: inline-block;
 	vertical-align: middle;
 	height: 100%;
-	float: left;
     width: 25%;
-
+	position: relative;
 	line-height: 20px;
 }
 
@@ -39,6 +38,7 @@
 	padding: 25px 0px;
 	overflow-y: scroll;
 	border: 1px solid #DDDDDD;
+	position: absolute;
 	border-radius: 4px;
 }
 
@@ -57,8 +57,6 @@ ul {
 	padding-bottom: 20px;
 }
 
-li {
-}	
 
 h2 {
 	font-size: 16px;
